fix overflow auto

--- a/frontendclient/resources/css/mystyle.css
+++ b/frontendclient/resources/css/mystyle.css
@@ -143,7 +143,7 @@ body {
 .mainwindow {
   font-size: 1.2em;
   margin: 0 12px;
-  overflow: scroll;
+  overflow-x: auto;
 }
 
 .mainwindow a {
